cabal-version:      2.4
name:               column
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules: Lib
  build-depends:
      base ^>=4.12.0.0
    , microlens ^>=0.4.11.2
    , microlens-mtl ^>=0.2.0.1
    , microlens-th ^>=0.4.3.5
    , mtl ^>=2.2.2
  hs-source-dirs: src
  default-extensions:
    RankNTypes
    TemplateHaskell
  ghc-options: -Wall -Werror
  default-language: Haskell2010

executable column-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.12.0.0
      , commander-cli ^>=0.10.1.2
      , column
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      TypeApplications
      DataKinds

test-suite column-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: LibSpec
  hs-source-dirs: test
  default-extensions:
    BlockArguments
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base ^>=4.12.0.0
    , column
    , hspec ^>=2.7.4
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.4
